# intra-kernel-profiler

./: .clangd.example  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: cupti_guide.md  explorer.md  gemm_walkthrough.md  install.md  integration_existing_kernels.md  nsys_guide.md  nvbit_guide.md  trace_format.md  trace_tips.md  tutorial.md
examples/cupti/: README.md  minimal_cupti_target.cu  run.sh
examples/gemm/: explorer.html  gemm_trace.json  gemm_trace_summary.json  run.sh  tiled_gemm.cu
examples/nsys/: explorer.html  merged_trace.json  nsys_demo.cu  run.sh
examples/nsys_nccl/: gemm_nccl_trace.json  nccl_demo.cu  run.sh
examples/nvbit/: README.md  minimal_nvbit_target.cu  run.sh
examples/region_demo/: README.md  minimal_region_target.cu  run.sh
examples/trace/: block_filter.cu  record.cu  run.sh  sampled_loop.cu
include/intra_kernel_profiler/: intra_kernel_profiler.hpp  version.hpp
include/intra_kernel_profiler/nvbit/: markers.cuh
include/intra_kernel_profiler/trace/: device_ctx.cuh  event.cuh  host_session.hpp  macros.cuh  trace.cuh
scripts/: analyze_cupti_join.py  annotate_source.py  generate_explorer.py  generate_gallery.py  ikp_cupti_divergence_merge.py  ikp_cupti_pcsamp_merge.py  ikp_cupti_sassmetrics_merge.py  ikp_nsys_import.py  ikp_nsys_merge.py  ikp_viz_mpl.py  nvbit_locality.py  pin_env.sh  plot_trace_summary.py  run_all_examples.sh  validate_json.py
scripts/ikp_viz/: __init__.py  loaders.py  plots.py
src/: nvbit_marker_device.cu
tools/: CMakeLists.txt  monaco_profiler_viewer.html
tools/cupti_minimal_activity/: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
tools/cupti_minimal_activity/src/: main.cu
tools/cupti_region_profiler/: CMakeLists.txt  Makefile  README.md
tools/cupti_region_profiler/config/: metrics_profiles.json
tools/cupti_region_profiler/src/: ikp_cupti_common.h  ikp_cupti_instrexec_inject.cpp  ikp_cupti_pcsamp_inject.cpp  ikp_cupti_pmsamp_inject.cpp  ikp_cupti_sassmetrics_inject.cpp
tools/nvbit_region_profiler/: CMakeLists.txt  Makefile  README.md
tools/nvbit_region_profiler/src/: common.h  inject_funcs.cu  region_profiler.cu
